<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/WhiteActionBar"
        app:popupTheme="@style/MenuStyle" />

    <LinearLayout
        android:id="@+id/detail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_toolbar"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/details_profile_image"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/blankuser" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/detail_text"
            android:textSize="14sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/edt_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_layout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/type_you_name_here" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_nickname"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_your_email_address" />

    <EditText
        android:id="@+id/mobilenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_phone_number" />


    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobilenumber"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/next"
        android:textColor="@android:color/white" />

</RelativeLayout>